Code Cleaning: Apply generics & AutoClose on streams