@@ -31,7 +31,6 @@
 package org.javacc.parser;
 
 import java.util.ArrayList;
-import java.util.BitSet;
 import java.util.Collections;
 import java.util.Enumeration;
 import java.util.HashMap;
@@ -61,13 +60,13 @@ public class NfaState
    private static List<NfaState> allStates = new ArrayList<NfaState>();
    private static List<NfaState> indexedAllStates = new ArrayList<NfaState>();
    private static List<NfaState> nonAsciiTableForMethod = new ArrayList<NfaState>();
-   private static Hashtable equivStatesTable = new Hashtable();
-   private static Hashtable allNextStates = new Hashtable();
-   private static Hashtable lohiByteTab = new Hashtable();
-   private static Hashtable stateNameForComposite = new Hashtable();
-   private static Hashtable compositeStateTable = new Hashtable();
-   private static Hashtable stateBlockTable = new Hashtable();
-   private static Hashtable stateSetsToFix = new Hashtable();
+   private static Hashtable<String, NfaState> equivStatesTable = new Hashtable<>();
+   private static Hashtable<String, int[]> allNextStates = new Hashtable<>();
+   private static Hashtable<String, Integer> lohiByteTab = new Hashtable<>();
+   private static Hashtable<String, Integer> stateNameForComposite = new Hashtable<>();
+   private static Hashtable<String, int[]> compositeStateTable = new Hashtable<>();
+   private static Hashtable<String, String> stateBlockTable = new Hashtable<>();
+   private static Hashtable<String, int[]> stateSetsToFix = new Hashtable<>();
 
    private static boolean jjCheckNAddStatesUnaryNeeded = false;
    private static boolean jjCheckNAddStatesDualNeeded = false;
@@ -114,9 +113,9 @@ public class NfaState
    private int[] compositeStates = null;
    private Set<NfaState> compositeStateSet = new HashSet<NfaState>();
    public boolean isFinal = false;
-   private Vector loByteVec;
+   private Vector<Integer> loByteVec;
    private int[] nonAsciiMoveIndices;
-   private int round = 0;
+//   private int round = 0;
    private int onlyChar = 0;
    private char matchSingleChar;
 
@@ -143,14 +142,14 @@ public class NfaState
       return retVal;
    }
 
-   static void InsertInOrder(List v, NfaState s)
+   static void InsertInOrder(List<NfaState> v, NfaState s)
    {
       int j;
 
       for (j = 0; j < v.size(); j++)
-         if (((NfaState)v.get(j)).id > s.id)
+         if (v.get(j).id > s.id)
             break;
-         else if (((NfaState)v.get(j)).id  == s.id)
+         else if (v.get(j).id  == s.id)
             return;
 
       v.add(j, s);
@@ -182,7 +181,7 @@ public class NfaState
       char temp;
       char temp1;
 
-      if ((int)c < 128) // ASCII char
+      if (c < 128) // ASCII char
       {
          AddASCIIMove(c);
          return;
@@ -333,17 +332,17 @@ public class NfaState
 
       // Recursively do closure
       for (i = 0; i < epsilonMoves.size(); i++)
-         ((NfaState)epsilonMoves.get(i)).EpsilonClosure();
+         epsilonMoves.get(i).EpsilonClosure();
 
       Enumeration<NfaState> e = epsilonMoves.elements();
 
       while (e.hasMoreElements())
       {
-         NfaState tmp = (NfaState)e.nextElement();
+         NfaState tmp = e.nextElement();
 
          for (i = 0; i < tmp.epsilonMoves.size(); i++)
          {
-            NfaState tmp1 = (NfaState)tmp.epsilonMoves.get(i);
+            NfaState tmp1 = tmp.epsilonMoves.get(i);
             if (tmp1.UsefulState() && !epsilonMoves.contains(tmp1))
             {
                InsertInOrder(epsilonMoves, tmp1);
@@ -427,16 +426,16 @@ public class NfaState
 
    NfaState CreateEquivState(List<NfaState> states)
    {
-      NfaState newState = ((NfaState)states.get(0)).CreateClone();
+      NfaState newState = states.get(0).CreateClone();
 
       newState.next = new NfaState();
 
       InsertInOrder(newState.next.epsilonMoves,
-                           ((NfaState)states.get(0)).next);
+                           states.get(0).next);
 
       for (int i = 1; i < states.size(); i++)
       {
-         NfaState tmp2 = ((NfaState)states.get(i));
+         NfaState tmp2 = (states.get(i));
 
          if (tmp2.kind < newState.kind)
             newState.kind = tmp2.kind;
@@ -454,7 +453,7 @@ public class NfaState
       Outer :
       for (int i = allStates.size(); i-- > 0;)
       {
-         NfaState other = (NfaState)allStates.get(i);
+         NfaState other = allStates.get(i);
 
          if (this != other && other.stateName != -1 &&
              kindToPrint == other.kindToPrint &&
@@ -520,7 +519,7 @@ public class NfaState
    {
       for (int i = allStates.size(); i-- > 0; )
       {
-         NfaState tmp = (NfaState)allStates.get(i);
+         NfaState tmp = allStates.get(i);
 
          if (!tmp.closureDone)
             tmp.OptimizeEpsilonMoves(true);
@@ -528,7 +527,7 @@ public class NfaState
 
       for (int i = 0; i < allStates.size(); i++)
       {
-         NfaState tmp = (NfaState)allStates.get(i);
+         NfaState tmp = allStates.get(i);
 
          if (!tmp.closureDone)
             tmp.OptimizeEpsilonMoves(false);
@@ -536,7 +535,7 @@ public class NfaState
 
       for (int i = 0; i < allStates.size(); i++)
       {
-         NfaState tmp = (NfaState)allStates.get(i);
+         NfaState tmp = allStates.get(i);
          tmp.epsilonMoveArray = new NfaState[tmp.epsilonMoves.size()];
          tmp.epsilonMoves.copyInto(tmp.epsilonMoveArray);
       }
@@ -561,8 +560,8 @@ public class NfaState
       }
 
       for (i = allStates.size(); i-- > 0;)
-         ((NfaState)allStates.get(i)).closureDone =
-                                  mark[((NfaState)allStates.get(i)).id];
+         allStates.get(i).closureDone =
+                                  mark[allStates.get(i).id];
 
       // Warning : The following piece of code is just an optimization.
       // in case of trouble, just remove this piece.
@@ -579,11 +578,11 @@ public class NfaState
          sometingOptimized = false;
          for (i = 0; optReqd && i < epsilonMoves.size(); i++)
          {
-            if ((tmp1 = (NfaState)epsilonMoves.get(i)).HasTransitions())
+            if ((tmp1 = epsilonMoves.get(i)).HasTransitions())
             {
                for (j = i + 1; j < epsilonMoves.size(); j++)
                {
-                  if ((tmp2 = (NfaState)epsilonMoves.get(j)).
+                  if ((tmp2 = epsilonMoves.get(j)).
                                                            HasTransitions() &&
                       (tmp1.asciiMoves[0] == tmp2.asciiMoves[0] &&
                        tmp1.asciiMoves[1] == tmp2.asciiMoves[1] &&
@@ -592,7 +591,7 @@ public class NfaState
                   {
                      if (equivStates == null)
                      {
-                        equivStates = new ArrayList();
+                        equivStates = new ArrayList<>();
                         equivStates.add(tmp1);
                      }
 
@@ -608,9 +607,9 @@ public class NfaState
                String tmp = "";
                for (int l = 0; l < equivStates.size(); l++)
                   tmp += String.valueOf(
-                            ((NfaState)equivStates.get(l)).id) + ", ";
+                            equivStates.get(l).id) + ", ";
 
-               if ((newState = (NfaState)equivStatesTable.get(tmp)) == null)
+               if ((newState = equivStatesTable.get(tmp)) == null)
                {
                   newState = CreateEquivState(equivStates);
                   equivStatesTable.put(tmp, newState);
@@ -627,11 +626,11 @@ public class NfaState
          {
             //if ((tmp1 = (NfaState)epsilonMoves.elementAt(i)).next == null)
                //continue;
-            tmp1 = (NfaState)epsilonMoves.get(i);
+            tmp1 = epsilonMoves.get(i);
 
             for (j = i + 1; j < epsilonMoves.size(); j++)
             {
-               tmp2 = (NfaState)epsilonMoves.get(j);
+               tmp2 = epsilonMoves.get(j);
 
                if (tmp1.next == tmp2.next)
                {
@@ -663,7 +662,7 @@ public class NfaState
       {
          for (i = 0; i < epsilonMoves.size(); i++)
             // Since we are doing a closure, just epsilon moves are unncessary
-            if (((NfaState)epsilonMoves.get(i)).HasTransitions())
+            if (epsilonMoves.get(i).HasTransitions())
                usefulEpsilonMoves++;
             else
                epsilonMoves.removeElementAt(i--);
@@ -690,13 +689,13 @@ public class NfaState
          epsilonMovesString = "{ ";
          for (int i = 0; i < epsilonMoves.size(); i++)
          {
-            if ((tempState = (NfaState)epsilonMoves.get(i)).
+            if ((tempState = epsilonMoves.get(i)).
                                                      HasTransitions())
             {
                if (tempState.stateName == -1)
                   tempState.GenerateCode();
 
-               ((NfaState)indexedAllStates.get(tempState.stateName)).inNextOf++;
+               indexedAllStates.get(tempState.stateName).inNextOf++;
                stateNames[cnt] = tempState.stateName;
                epsilonMovesString += tempState.stateName + ", ";
                if (cnt++ > 0 && cnt % 16 == 0)
@@ -730,11 +729,11 @@ public class NfaState
       if (s == null || s.equals("null;"))
          return false;
 
-      int[] states = (int[])allNextStates.get(s);
+      int[] states = allNextStates.get(s);
 
       for (int i = 0; i < states.length; i++)
       {
-         NfaState tmp = (NfaState)indexedAllStates.get(states[i]);
+         NfaState tmp = indexedAllStates.get(states[i]);
 
          if ((tmp.asciiMoves[c / 64 ] & (1L << c % 64)) != 0L)
             return true;
@@ -802,7 +801,7 @@ public class NfaState
       if (CanMoveUsingChar(c))
       {
          for (int i = next.epsilonMoves.size(); i-- > 0;)
-            InsertInOrder(newStates, (NfaState)next.epsilonMoves.get(i));
+            InsertInOrder(newStates, next.epsilonMoves.get(i));
 
          return kindToPrint;
       }
@@ -810,20 +809,20 @@ public class NfaState
       return Integer.MAX_VALUE;
    }
 
-   public static int MoveFromSet(char c, List states, List newStates)
+   public static int MoveFromSet(char c, List<NfaState> states, List<NfaState> newStates)
    {
       int tmp;
       int retVal = Integer.MAX_VALUE;
 
       for (int i = states.size(); i-- > 0;)
          if (retVal >
-             (tmp = ((NfaState)states.get(i)).MoveFrom(c, newStates)))
+             (tmp = states.get(i).MoveFrom(c, newStates)))
             retVal = tmp;
 
       return retVal;
    }
 
-   static List allBitVectors = new ArrayList();
+   static List<String> allBitVectors = new ArrayList<>();
 
    /* This function generates the bit vectors of low and hi bytes for common
       bit vectors and returns those that are not common with anything (in
@@ -937,7 +936,7 @@ public class NfaState
                     "0x" + Long.toHexString(common[1]) + "L, " +
                     "0x" + Long.toHexString(common[2]) + "L, " +
                     "0x" + Long.toHexString(common[3]) + "L\n};";
-            if ((ind = (Integer)lohiByteTab.get(tmp)) == null)
+            if ((ind = lohiByteTab.get(tmp)) == null)
             {
                allBitVectors.add(tmp);
 
@@ -949,7 +948,7 @@ public class NfaState
                     codeGenerator.genCodeLine("static const " + Options.getLongType() + " jjbitVec" +  lohiByteCnt + "[] = " + tmp);
                   }
                }
-               lohiByteTab.put(tmp, ind = new Integer(lohiByteCnt++));
+               lohiByteTab.put(tmp, ind = Integer.valueOf(lohiByteCnt++));
             }
 
             tmpIndices[cnt++] = ind.intValue();
@@ -958,7 +957,7 @@ public class NfaState
                     "0x" + Long.toHexString(loBytes[i][1]) + "L, " +
                     "0x" + Long.toHexString(loBytes[i][2]) + "L, " +
                     "0x" + Long.toHexString(loBytes[i][3]) + "L\n};";
-            if ((ind = (Integer)lohiByteTab.get(tmp)) == null)
+            if ((ind = lohiByteTab.get(tmp)) == null)
             {
                allBitVectors.add(tmp);
 
@@ -970,7 +969,7 @@ public class NfaState
                     codeGenerator.genCodeLine("static const " + Options.getLongType() + " jjbitVec" + lohiByteCnt + "[] = " + tmp);
                     codeGenerator.switchToMainFile();
                   }
-               lohiByteTab.put(tmp, ind = new Integer(lohiByteCnt++));
+               lohiByteTab.put(tmp, ind = Integer.valueOf(lohiByteCnt++));
             }
 
             tmpIndices[cnt++] = ind.intValue();
@@ -1007,7 +1006,7 @@ public class NfaState
                     "0x" + Long.toHexString(loBytes[i][2]) + "L, " +
                     "0x" + Long.toHexString(loBytes[i][3]) + "L\n};";
 
-            if ((ind = (Integer)lohiByteTab.get(tmp)) == null)
+            if ((ind = lohiByteTab.get(tmp)) == null)
             {
                allBitVectors.add(tmp);
 
@@ -1018,13 +1017,13 @@ public class NfaState
                     codeGenerator.switchToStaticsFile();
                     codeGenerator.genCodeLine("static const " + Options.getLongType() + " jjbitVec" +  lohiByteCnt + "[] = " + tmp);
                   }
-               lohiByteTab.put(tmp, ind = new Integer(lohiByteCnt++));
+               lohiByteTab.put(tmp, ind = Integer.valueOf(lohiByteCnt++));
             }
 
             if (loByteVec == null)
-               loByteVec = new Vector();
+               loByteVec = new Vector<>();
 
-            loByteVec.add(new Integer(i));
+            loByteVec.add(Integer.valueOf(i));
             loByteVec.add(ind);
          }
       }
@@ -1036,7 +1035,7 @@ public class NfaState
    {
       for (int i = 0; i < nonAsciiTableForMethod.size(); i++)
       {
-         NfaState tmp = (NfaState)nonAsciiTableForMethod.get(i);
+         NfaState tmp = nonAsciiTableForMethod.get(i);
          if (EqualLoByteVectors(loByteVec, tmp.loByteVec) &&
              EqualNonAsciiMoveIndices(nonAsciiMoveIndices, tmp.nonAsciiMoveIndices))
          {
@@ -1049,7 +1048,7 @@ public class NfaState
       nonAsciiTableForMethod.add(this);
    }
 
-   private static boolean EqualLoByteVectors(List vec1, List vec2)
+   private static boolean EqualLoByteVectors(List<Integer> vec1, List<Integer> vec2)
    {
       if (vec1 == null || vec2 == null)
          return false;
@@ -1062,8 +1061,8 @@ public class NfaState
 
       for (int i = 0; i < vec1.size(); i++)
       {
-         if (((Integer)vec1.get(i)).intValue() !=
-             ((Integer)vec2.get(i)).intValue())
+         if (vec1.get(i).intValue() !=
+             vec2.get(i).intValue())
             return false;
       }
 
@@ -1109,11 +1108,11 @@ public class NfaState
    {
       Integer stateNameToReturn;
 
-      if ((stateNameToReturn = (Integer)stateNameForComposite.get(stateSetString)) != null)
+      if ((stateNameToReturn = stateNameForComposite.get(stateSetString)) != null)
          return stateNameToReturn.intValue();
 
       int toRet = 0;
-      int[] nameSet = (int[])allNextStates.get(stateSetString);
+      int[] nameSet = allNextStates.get(stateSetString);
 
       if (!starts)
          stateBlockTable.put(stateSetString, stateSetString);
@@ -1123,7 +1122,7 @@ public class NfaState
 
       if (nameSet.length == 1)
       {
-         stateNameToReturn = new Integer(nameSet[0]);
+         stateNameToReturn = Integer.valueOf(nameSet[0]);
          stateNameForComposite.put(stateSetString, stateNameToReturn);
          return nameSet[0];
       }
@@ -1133,26 +1132,26 @@ public class NfaState
          if (nameSet[i] == -1)
             continue;
 
-         NfaState st = (NfaState)indexedAllStates.get(nameSet[i]);
+         NfaState st = indexedAllStates.get(nameSet[i]);
          st.isComposite = true;
          st.compositeStates = nameSet;
       }
 
       while (toRet < nameSet.length &&
-             (starts && ((NfaState)indexedAllStates.get(nameSet[toRet])).inNextOf > 1))
+             (starts && indexedAllStates.get(nameSet[toRet]).inNextOf > 1))
          toRet++;
 
       Enumeration<String> e = compositeStateTable.keys();
       String s;
       while (e.hasMoreElements())
       {
-         s = (String)e.nextElement();
+         s = e.nextElement();
          if (!s.equals(stateSetString) && Intersect(stateSetString, s))
          {
-            int[] other = (int[])compositeStateTable.get(s);
+            int[] other = compositeStateTable.get(s);
 
             while (toRet < nameSet.length &&
-                   ((starts && ((NfaState)indexedAllStates.get(nameSet[toRet])).inNextOf > 1) ||
+                   ((starts && indexedAllStates.get(nameSet[toRet]).inNextOf > 1) ||
                     ElemOccurs(nameSet[toRet], other) >= 0))
                toRet++;
          }
@@ -1189,7 +1188,7 @@ public class NfaState
       else
          tmp = nameSet[toRet];
 
-      stateNameToReturn = new Integer(tmp);
+      stateNameToReturn = Integer.valueOf(tmp);
       stateNameForComposite.put(stateSetString, stateNameToReturn);
       compositeStateTable.put(stateSetString, nameSet);
       if (JavaCCGlobals.getCodeGenerator() != null ||
@@ -1207,7 +1206,7 @@ public class NfaState
 
    private static int StateNameForComposite(String stateSetString)
    {
-      return ((Integer)stateNameForComposite.get(stateSetString)).intValue();
+      return stateNameForComposite.get(stateSetString).intValue();
    }
 
    static int InitStateName()
@@ -1229,16 +1228,16 @@ public class NfaState
       return AddStartStateSet(epsilonMovesString);
    }
 
-   static Hashtable tableToDump = new Hashtable();
-   static List orderedStateSet = new ArrayList();
+   static Hashtable<String, int[]> tableToDump = new Hashtable<>();
+   static List<int[]> orderedStateSet = new ArrayList<>();
 
    static int lastIndex = 0;
    private static int[] GetStateSetIndicesForUse(String arrayString)
    {
       int[] ret;
-      int[] set = (int[])allNextStates.get(arrayString);
+      int[] set = allNextStates.get(arrayString);
 
-      if ((ret = (int[])tableToDump.get(arrayString)) == null)
+      if ((ret = tableToDump.get(arrayString)) == null)
       {
          ret = new int[2];
          ret[0] = lastIndex;
@@ -1264,7 +1263,7 @@ public class NfaState
       if (orderedStateSet.size() > 0)
     	  for (int i = 0; i < orderedStateSet.size(); i++)
     	  {
-    		  int[] set = (int[])orderedStateSet.get(i);
+    		  int[] set = orderedStateSet.get(i);
 
     		  for (int j = 0; j < set.length; j++)
     		  {
@@ -1299,7 +1298,7 @@ public class NfaState
       return retVal;
    }
 
-   static String GetStateSetString(List states)
+   static String GetStateSetString(List<NfaState> states)
    {
       if (states == null || states.size() == 0)
          return "null;";
@@ -1309,7 +1308,7 @@ public class NfaState
       for (int i = 0; i < states.size(); )
       {
          int k;
-         retVal += (k = ((NfaState)states.get(i)).stateName) + ", ";
+         retVal += (k = states.get(i).stateName) + ", ";
          set[i] = k;
 
          if (i++ > 0 && i % 16 == 0)
@@ -1364,7 +1363,7 @@ public class NfaState
 
       String set = next.epsilonMovesString;
 
-      int[] nameSet = (int[])allNextStates.get(set);
+      int[] nameSet = allNextStates.get(set);
 
       if (nameSet.length <= 2 || compositeStateTable.get(set) != null)
          return false;
@@ -1384,12 +1383,12 @@ public class NfaState
       }
 
       int j, blockLen = 0, commonFreq = 0;
-      Enumeration e = allNextStates.keys();
+      Enumeration<String> e = allNextStates.keys();
       boolean needUpdate;
 
       while (e.hasMoreElements())
       {
-         int[] tmpSet = (int[])allNextStates.get(e.nextElement());
+         int[] tmpSet = allNextStates.get(e.nextElement());
          if (tmpSet == nameSet)
             continue;
 
@@ -1447,7 +1446,7 @@ public class NfaState
       {
          if (live[i])
          {
-            if (((NfaState)indexedAllStates.get(nameSet[i])).isComposite)
+            if (indexedAllStates.get(nameSet[i]).isComposite)
                return false;
 
             stateDone[nameSet[i]] = true;
@@ -1467,7 +1466,7 @@ public class NfaState
          int at;
          boolean firstOne = true;
          String stringToFix;
-         int[] setToFix = (int[])allNextStates.get(stringToFix = (String)e.nextElement());
+         int[] setToFix = allNextStates.get(stringToFix = e.nextElement());
 
          if (setToFix == commonBlock)
             continue;
@@ -1500,30 +1499,30 @@ public class NfaState
 
       String set = next.epsilonMovesString;
 
-      int[] nameSet = (int[])allNextStates.get(set);
+      int[] nameSet = allNextStates.get(set);
 
       if (nameSet.length == 1 || compositeStateTable.get(set) != null ||
           stateSetsToFix.get(set) != null)
          return false;
 
       int i;
-      Hashtable occursIn = new Hashtable();
-      NfaState tmp = (NfaState)allStates.get(nameSet[0]);
+      Hashtable<String, int[]> occursIn = new Hashtable<>();
+      NfaState tmp = allStates.get(nameSet[0]);
 
       for (i = 1; i < nameSet.length; i++)
       {
-         NfaState tmp1 = (NfaState)allStates.get(nameSet[i]);
+         NfaState tmp1 = allStates.get(nameSet[i]);
 
          if (tmp.inNextOf != tmp1.inNextOf)
             return false;
       }
 
       int isPresent, j;
-      Enumeration e = allNextStates.keys();
+      Enumeration<String> e = allNextStates.keys();
       while (e.hasMoreElements())
       {
          String s;
-         int[] tmpSet = (int[])allNextStates.get(s = (String)e.nextElement());
+         int[] tmpSet = allNextStates.get(s = e.nextElement());
 
          if (tmpSet == nameSet)
             continue;
@@ -1555,7 +1554,7 @@ public class NfaState
       while (e.hasMoreElements())
       {
          String s;
-         int[] setToFix = (int[])occursIn.get(s = (String)e.nextElement());
+         int[] setToFix = occursIn.get(s = e.nextElement());
 
          if (stateSetsToFix.get(s) == null)
             stateSetsToFix.put(s, setToFix);
@@ -1572,15 +1571,15 @@ public class NfaState
 
    private static void FixStateSets()
    {
-      Hashtable fixedSets = new Hashtable();
-      Enumeration e = stateSetsToFix.keys();
+      Hashtable<String, int[]> fixedSets = new Hashtable<>();
+      Enumeration<String> e = stateSetsToFix.keys();
       int[] tmp = new int[generatedStates];
       int i;
 
       while (e.hasMoreElements())
       {
          String s;
-         int[] toFix = (int[])stateSetsToFix.get(s = (String)e.nextElement());
+         int[] toFix = stateSetsToFix.get(s = e.nextElement());
          int cnt = 0;
 
          //System.out.print("Fixing : ");
@@ -1600,7 +1599,7 @@ public class NfaState
 
       for (i = 0; i < allStates.size(); i++)
       {
-         NfaState tmpState = (NfaState)allStates.get(i);
+         NfaState tmpState = allStates.get(i);
          int[] newSet;
 
          if (tmpState.next == null || tmpState.next.usefulEpsilonMoves == 0)
@@ -1608,7 +1607,7 @@ public class NfaState
 
          /*if (compositeStateTable.get(tmpState.next.epsilonMovesString) != null)
             tmpState.next.usefulEpsilonMoves = 1;
-         else*/ if ((newSet = (int[])fixedSets.get(tmpState.next.epsilonMovesString)) != null)
+         else*/ if ((newSet = fixedSets.get(tmpState.next.epsilonMovesString)) != null)
             tmpState.FixNextStates(newSet);
       }
    }
@@ -1624,8 +1623,8 @@ public class NfaState
       if (set1 == null || set2 == null)
          return false;
 
-      int[] nameSet1 = (int[])allNextStates.get(set1);
-      int[] nameSet2 = (int[])allNextStates.get(set2);
+      int[] nameSet1 = allNextStates.get(set1);
+      int[] nameSet2 = allNextStates.get(set2);
 
       if (nameSet1 == null || nameSet2 == null)
          return false;
@@ -1673,18 +1672,18 @@ public class NfaState
       codeGenerator.genCodeLine("            {");
    }
 
-   private static Vector PartitionStatesSetForAscii(int[] states, int byteNum)
+   private static Vector<List<NfaState>> PartitionStatesSetForAscii(int[] states, int byteNum)
    {
       int[] cardinalities = new int[states.length];
-      Vector original = new Vector();
-      Vector partition = new Vector();
+      Vector<NfaState> original = new Vector<>();
+      Vector<List<NfaState>> partition = new Vector<>();
       NfaState tmp;
 
       original.setSize(states.length);
       int cnt = 0;
       for (int i = 0; i < states.length; i++)
       {
-         tmp = (NfaState)allStates.get(states[i]);
+         tmp = allStates.get(states[i]);
 
          if (tmp.asciiMoves[byteNum] != 0L)
          {
@@ -1709,16 +1708,16 @@ public class NfaState
 
       while (original.size() > 0)
       {
-         tmp = (NfaState)original.get(0);
+         tmp = original.get(0);
          original.removeElement(tmp);
 
          long bitVec = tmp.asciiMoves[byteNum];
-         List<NfaState> subSet = new ArrayList<NfaState>();
+         List<NfaState> subSet = new ArrayList<>();
          subSet.add(tmp);
 
          for (int j = 0; j < original.size(); j++)
          {
-            NfaState tmp1 = (NfaState)original.get(j);
+            NfaState tmp1 = original.get(j);
 
             if ((tmp1.asciiMoves[byteNum] & bitVec) == 0L)
             {
@@ -1765,7 +1764,7 @@ public class NfaState
    {
       int i;
 
-      int[] nameSet = (int[])allNextStates.get(key);
+      int[] nameSet = allNextStates.get(key);
 
       if (nameSet.length == 1 || dumped[StateNameForComposite(key)])
          return;
@@ -1779,7 +1778,7 @@ public class NfaState
 
       for (i = 0; i < nameSet.length; i++)
       {
-         tmp = (NfaState)allStates.get(nameSet[i]);
+         tmp = allStates.get(nameSet[i]);
 
          if (tmp.asciiMoves[byteNum] != 0L)
          {
@@ -1829,7 +1828,7 @@ public class NfaState
          return;
       }
 
-      List partition = PartitionStatesSetForAscii(nameSet, byteNum);
+      List<List<NfaState>> partition = PartitionStatesSetForAscii(nameSet, byteNum);
 
       if (!toPrint.equals(""))
          codeGenerator.genCode(toPrint);
@@ -1841,11 +1840,11 @@ public class NfaState
 
       for (i = 0; i < partition.size(); i++)
       {
-         List subSet = (List)partition.get(i);
+        List<NfaState> subSet = partition.get(i);
 
          for (int j = 0; j < subSet.size(); j++)
          {
-            tmp = (NfaState)subSet.get(j);
+            tmp = subSet.get(j);
 
             if (stateBlock)
                dumped[tmp.stateName] = true;
@@ -1864,7 +1863,7 @@ public class NfaState
       if (next == null || next.epsilonMovesString == null)
          return false;
 
-      int[] set = (int[])allNextStates.get(next.epsilonMovesString);
+      int[] set = allNextStates.get(next.epsilonMovesString);
       return ElemOccurs(stateName, set) >= 0;
    }
 
@@ -1874,7 +1873,7 @@ public class NfaState
 
       for (int j = 0; j < allStates.size(); j++)
       {
-         NfaState temp1 = (NfaState)allStates.get(j);
+         NfaState temp1 = allStates.get(j);
 
          if (this == temp1 || temp1.stateName == -1 || temp1.dummy ||
              stateName == temp1.stateName || temp1.asciiMoves[byteNum] == 0L)
@@ -1916,7 +1915,7 @@ public class NfaState
 
       if (next != null && next.usefulEpsilonMoves > 0)
       {
-         int[] stateNames = (int[])allNextStates.get(
+         int[] stateNames = allNextStates.get(
                                           next.epsilonMovesString);
          if (next.usefulEpsilonMoves == 1)
          {
@@ -1963,7 +1962,7 @@ public class NfaState
 
       for (int j = 0; j < allStates.size(); j++)
       {
-         NfaState temp1 = (NfaState)allStates.get(j);
+         NfaState temp1 = allStates.get(j);
 
          if (this == temp1 || temp1.stateName == -1 || temp1.dummy ||
              stateName == temp1.stateName || temp1.asciiMoves[byteNum] == 0L)
@@ -2066,7 +2065,7 @@ public class NfaState
 
       if (next != null && next.usefulEpsilonMoves > 0)
       {
-         int[] stateNames = (int[])allNextStates.get(
+         int[] stateNames = allNextStates.get(
                                           next.epsilonMovesString);
          if (next.usefulEpsilonMoves == 1)
          {
@@ -2110,16 +2109,16 @@ public class NfaState
    private static void DumpAsciiMoves(CodeGenHelper codeGenerator, int byteNum)
    {
       boolean[] dumped = new boolean[Math.max(generatedStates, dummyStateIndex + 1)];
-      Enumeration e = compositeStateTable.keys();
+      Enumeration<String> e = compositeStateTable.keys();
 
       DumpHeadForCase(codeGenerator, byteNum);
 
       while (e.hasMoreElements())
-         DumpCompositeStatesAsciiMoves(codeGenerator, (String)e.nextElement(), byteNum, dumped);
+         DumpCompositeStatesAsciiMoves(codeGenerator, e.nextElement(), byteNum, dumped);
 
       for (int i = 0; i < allStates.size(); i++)
       {
-         NfaState temp = (NfaState)allStates.get(i);
+         NfaState temp = allStates.get(i);
 
          if (dumped[temp.stateName] || temp.lexState != Main.lg.lexStateIndex ||
              !temp.HasTransitions() || temp.dummy ||
@@ -2172,7 +2171,7 @@ public class NfaState
                                       String key, boolean[] dumped)
    {
       int i;
-      int[] nameSet = (int[])allNextStates.get(key);
+      int[] nameSet = allNextStates.get(key);
 
       if (nameSet.length == 1 || dumped[StateNameForComposite(key)])
          return;
@@ -2186,7 +2185,7 @@ public class NfaState
 
       for (i = 0; i < nameSet.length; i++)
       {
-         tmp = (NfaState)allStates.get(nameSet[i]);
+         tmp = allStates.get(nameSet[i]);
 
          if (tmp.nonAsciiMethod != -1)
          {
@@ -2243,7 +2242,7 @@ public class NfaState
 
       for (i = 0; i < nameSet.length; i++)
       {
-         tmp = (NfaState)allStates.get(nameSet[i]);
+         tmp = allStates.get(nameSet[i]);
 
          if (tmp.nonAsciiMethod != -1)
          {
@@ -2264,7 +2263,7 @@ public class NfaState
       boolean nextIntersects = selfLoop();
       for (int j = 0; j < allStates.size(); j++)
       {
-         NfaState temp1 = (NfaState)allStates.get(j);
+         NfaState temp1 = allStates.get(j);
 
          if (this == temp1 || temp1.stateName == -1 || temp1.dummy ||
              stateName == temp1.stateName || (temp1.nonAsciiMethod == -1))
@@ -2282,7 +2281,7 @@ public class NfaState
       {
          if (loByteVec != null && loByteVec.size() > 1)
             codeGenerator.genCodeLine("                  if ((jjbitVec" +
-             ((Integer)loByteVec.get(1)).intValue() + "[i2" +
+             loByteVec.get(1).intValue() + "[i2" +
                 "] & l2) != 0L)");
       }
       else
@@ -2300,7 +2299,7 @@ public class NfaState
 
       if (next != null && next.usefulEpsilonMoves > 0)
       {
-         int[] stateNames = (int[])allNextStates.get(
+         int[] stateNames = allNextStates.get(
                                           next.epsilonMovesString);
          if (next.usefulEpsilonMoves == 1)
          {
@@ -2344,7 +2343,7 @@ public class NfaState
 
       for (int j = 0; j < allStates.size(); j++)
       {
-         NfaState temp1 = (NfaState)allStates.get(j);
+         NfaState temp1 = allStates.get(j);
 
          if (this == temp1 || temp1.stateName == -1 || temp1.dummy ||
              stateName == temp1.stateName || (temp1.nonAsciiMethod == -1))
@@ -2375,7 +2374,7 @@ public class NfaState
          {
             if (loByteVec != null && loByteVec.size() > 1)
                codeGenerator.genCodeLine("                  if ((jjbitVec" +
-                ((Integer)loByteVec.get(1)).intValue() + "[i2" +
+                loByteVec.get(1).intValue() + "[i2" +
                    "] & l2) != 0L" + kindCheck + ")");
          }
          else
@@ -2396,7 +2395,7 @@ public class NfaState
             if (loByteVec != null && loByteVec.size() > 1)
             {
                codeGenerator.genCodeLine("                  if ((jjbitVec" +
-                ((Integer)loByteVec.get(1)).intValue() + "[i2" +
+                loByteVec.get(1).intValue() + "[i2" +
                 "] & l2) == 0L)");
                codeGenerator.genCodeLine("                     break;");
             }
@@ -2416,7 +2415,7 @@ public class NfaState
       {
          if (loByteVec != null && loByteVec.size() > 1)
             codeGenerator.genCodeLine("                  if ((jjbitVec" +
-             ((Integer)loByteVec.get(1)).intValue() + "[i2" +
+             loByteVec.get(1).intValue() + "[i2" +
                 "] & l2) != 0L)");
       }
       else
@@ -2427,7 +2426,7 @@ public class NfaState
 
       if (next != null && next.usefulEpsilonMoves > 0)
       {
-         int[] stateNames = (int[])allNextStates.get(
+         int[] stateNames = allNextStates.get(
                                           next.epsilonMovesString);
          if (next.usefulEpsilonMoves == 1)
          {
@@ -2477,7 +2476,7 @@ public class NfaState
 
       for (i = 0; i < allStates.size(); i++)
       {
-         NfaState temp = (NfaState)allStates.get(i);
+         NfaState temp = allStates.get(i);
 
          if (temp.stateName == -1 || dumped[temp.stateName] || temp.lexState != Main.lg.lexStateIndex ||
              !temp.HasTransitions() || temp.dummy )
@@ -2536,7 +2535,7 @@ public class NfaState
 
       for (int i = 0; i < nonAsciiTableForMethod.size(); i++)
       {
-         NfaState tmp = (NfaState)nonAsciiTableForMethod.get(i);
+         NfaState tmp = nonAsciiTableForMethod.get(i);
          tmp.DumpNonAsciiMoveMethod(codeGenerator);
       }
    }
@@ -2560,12 +2559,12 @@ public class NfaState
          for (j = 0; j < loByteVec.size(); j += 2)
          {
             codeGenerator.genCodeLine("      case " +
-                         ((Integer)loByteVec.get(j)).intValue() + ":");
-            if (!AllBitsSet((String)allBitVectors.get(
-                 ((Integer)loByteVec.get(j + 1)).intValue())))
+                         loByteVec.get(j).intValue() + ":");
+            if (!AllBitsSet(allBitVectors.get(
+                 loByteVec.get(j + 1).intValue())))
             {
                codeGenerator.genCodeLine("         return ((jjbitVec" +
-                ((Integer)loByteVec.get(j + 1)).intValue() + "[i2" +
+                loByteVec.get(j + 1).intValue() + "[i2" +
                    "] & l2) != 0L);");
             }
             else
@@ -2580,11 +2579,11 @@ public class NfaState
       {
          do
          {
-            if (!AllBitsSet((String)allBitVectors.get(
+            if (!AllBitsSet(allBitVectors.get(
                                nonAsciiMoveIndices[j - 2])))
                codeGenerator.genCodeLine("         if ((jjbitVec" + nonAsciiMoveIndices[j - 2] +
                             "[i1] & l1) != 0L)");
-            if (!AllBitsSet((String)allBitVectors.get(
+            if (!AllBitsSet(allBitVectors.get(
                                nonAsciiMoveIndices[j - 1])))
             {
                codeGenerator.genCodeLine("            if ((jjbitVec" + nonAsciiMoveIndices[j - 1] +
@@ -2604,14 +2603,14 @@ public class NfaState
 
    private static void ReArrange()
    {
-      List v = allStates;
-      allStates = new ArrayList(Collections.nCopies(generatedStates, null));
+      List<NfaState> v = allStates;
+      allStates = new ArrayList<>(Collections.nCopies(generatedStates, null));
 
       if (allStates.size() != generatedStates) throw new Error("What??");
 
       for (int j = 0; j < v.size(); j++)
       {
-         NfaState tmp = (NfaState)v.get(j);
+         NfaState tmp = v.get(j);
          if (tmp.stateName != -1 && !tmp.dummy)
             allStates.set(tmp.stateName, tmp);
       }
@@ -2727,7 +2726,7 @@ public class NfaState
       for (j = 0; j < allStates.size(); j++)
       {
          NfaState stateForCase = null;
-         NfaState tmpState = (NfaState)allStates.get(j);
+         NfaState tmpState = allStates.get(j);
 
          if (tmpState.stateName == -1 || tmpState.dummy || !tmpState.UsefulState() ||
              tmpState.next == null || tmpState.next.usefulEpsilonMoves < 1)
@@ -2739,7 +2738,7 @@ public class NfaState
             continue;
 
          printed.put(s, s);
-         int[] nexts = (int[])allNextStates.get(s);
+         int[] nexts = allNextStates.get(s);
 
          if (nexts.length == 1)
             continue;
@@ -2751,7 +2750,7 @@ public class NfaState
             if ((state = nexts[i]) == -1)
                continue;
 
-            NfaState tmp = (NfaState)allStates.get(state);
+            NfaState tmp = allStates.get(state);
 
             if (!tmp.isComposite && tmp.inNextOf == 1)
             {
@@ -2777,7 +2776,7 @@ public class NfaState
             if ((state = nexts[i]) == -1)
                continue;
 
-            NfaState tmp = (NfaState)allStates.get(state);
+            NfaState tmp = allStates.get(state);
 
             if (!put[state] && tmp.inNextOf > 1 && !tmp.isComposite && tmp.stateForCase == null)
             {
@@ -2805,7 +2804,7 @@ public class NfaState
             if ((state = nexts[i]) == -1)
                continue;
 
-            NfaState tmp = (NfaState)allStates.get(state);
+            NfaState tmp = allStates.get(state);
             if (tmp.inNextOf <= 1)
                put[state] = false;
          }
@@ -2833,7 +2832,7 @@ public class NfaState
 
       for (i = 0; i < allStates.size(); i++)
       {
-         NfaState temp = (NfaState)allStates.get(i);
+         NfaState temp = allStates.get(i);
 
          if (temp.lexState != Main.lg.lexStateIndex ||
              !temp.HasTransitions() || temp.dummy ||
@@ -2857,10 +2856,10 @@ public class NfaState
       while (e.hasMoreElements())
       {
          String s = (String)e.nextElement();
-         int state = ((Integer)stateNameForComposite.get(s)).intValue();
+         int state = stateNameForComposite.get(s).intValue();
 
          if (state >= generatedStates)
-            statesForState[Main.lg.lexStateIndex][state] = (int[])allNextStates.get(s);
+            statesForState[Main.lg.lexStateIndex][state] = allNextStates.get(s);
       }
 
       if (stateSetsToFix.size() != 0)
@@ -3294,7 +3293,7 @@ public class NfaState
      List<NfaState> cleanStates = new ArrayList<NfaState>();
      NfaState startState = null;
      for (int i = 0; i < allStates.size(); i++) {
-       NfaState tmp = (NfaState)allStates.get(i);
+       NfaState tmp = allStates.get(i);
        if (tmp.stateName == -1) {
            assert(tmp.kindToPrint == Integer.MAX_VALUE);
            continue;
